tests/NormalTests/paczka1/small_fuzzy/69373653.err
Error in line 4: S267 S106 54,75
Error in line 8: 4LT S327 23,1
Error in line 15: lo9ojYkzhao S267 34,2
